<resources>
    <string name="about_address">401 North Michigan Avenue Chicago, IL 60611</string>
    <string name="about_email">info@blustor.co</string>
    <string name="about_phone">+1 312–840–8250</string>
    <string name="app_name">PasswordVault</string>
    <string name="button_change_password">Change password</string>
    <string name="button_generate">Generate</string>
    <string name="content_description_cards">Cards</string>
    <string name="content_description_entry_icon">Entry icon</string>
    <string name="content_description_group_icon">Group icon</string>
    <string name="content_description_icon">Icon</string>
    <string name="content_description_vault">Vault</string>
    <string name="hint_name">Name</string>
    <string name="hint_notes">Notes</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_repeat">Password (repeat)</string>
    <string name="hint_title">Title</string>
    <string name="hint_url">URL</string>
    <string name="hint_username">Username</string>
    <string name="imageview_icon_content_description">Icon</string>
    <string name="menu_about">About</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_save">Save</string>
    <string name="menu_search">Search</string>
    <string name="menu_set">Set</string>
    <string name="menu_settings">Settings</string>
    <string name="passwordgenerator_brackets">Brackets</string>
    <string name="passwordgenerator_dash">Dash</string>
    <string name="passwordgenerator_digits">Digits (0, 1, 2, …)</string>
    <string name="passwordgenerator_lower">Lower-case (a, b, c, …)</string>
    <string name="passwordgenerator_space">Space</string>
    <string name="passwordgenerator_special">Special</string>
    <string name="passwordgenerator_underscore">Underscore</string>
    <string name="passwordgenerator_upper">Upper-case (A, B, C, …)</string>
    <string name="path_in">in %s</string>
    <string name="placeholder_characters">32 characters</string>
    <string name="placeholder_name">Name</string>
    <string name="placeholder_password">password</string>
    <string name="placeholder_status">Status</string>
    <string name="placeholder_text">Text</string>\
    <string name="placeholder_title">Title</string>
    <string name="status_connecting">Connecting …</string>
    <string name="status_decrypting">Decrypting …</string>
    <string name="status_encrypting">Encrypting …</string>
    <string name="status_failed">Failed</string>
    <string name="status_synced">Synced</string>
    <string name="status_transferring">Transferring</string>
    <string name="textview_empty">Empty</string>
    <string name="textview_no_results">No results.</string>
    <string name="welcome_to">Welcome to</string>
    <string name="menu_new_database">New database</string>
    <string name="menu_open_existing_database">Open existing database</string>
    <string name="button_copy">Copy</string>
    <string name="error_name_is_required">Name is required.</string>
    <string name="error_title_is_required">Title is required.</string>
    <string name="error_password_is_required">Password is required.</string>
    <string name="error_passwords_do_not_match">Passwords do not match.</string>
    <string name="title_choose_card">Choose your card</string>
    <string name="togglebutton_scanning">Scanning</string>
    <string name="togglebutton_not_scanning">Not scanning</string>
    <string name="error_permission_location_scan">We need location permission to scan for your card.</string>
    <string name="menu_choose_card">Choose card</string>
</resources>
