<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_description_cards"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/card" />

    <ToggleButton
        android:id="@+id/button_scan_toggle"
        android:textOn="@string/togglebutton_scanning"
        android:textOff="@string/togglebutton_not_scanning"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/progressbar_results"
        android:indeterminateBehavior="cycle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_results"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_scanresult" />

</LinearLayout>
